SonarQube
* Added SonarQube plugin 

* Added jacoco plugin for test coverage

* Fixed code smells

* Updated build workflow with sonarqube